<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disable Manager</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_label">Label</string>
    <string name="menu_share_package">Package name</string>
    <string name="menu_share_label_and_package">Label and Package name</string>
    <string name="menu_share_customformat">Custom Format</string>
    <string name="menu_filter_disabled">Disabled apps</string>
    <string name="menu_filter_disablable_and_enabled_apps">Enabled and Disablable apps</string>
    <string name="menu_filter_undisablable_system">Undisablable system apps</string>
    <string name="menu_filter_user_apps">User apps</string>
    <string name="menu_filter_hide">Hided apps</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_preference">Preference</string>

    <!-- empty -->
    <string name="message_empty_list">Empty.</string>

    <!-- share message -->
    <string name="message_share_no_app">There is no app to share.</string>

    <!-- comment -->
    <string name="comment_dialog_title">Edit comment</string>
    <string name="comment_dialog_edittext_hint">Add comment here.</string>

    <!-- settings -->
    <!-- pref_cat_name -->
    <!-- pref_key_category_name -->
    <!-- pref_title_category_name -->
    <!-- pref_summary_category_name -->
    <!-- pref_def_category_name -->
    <string name="pref_cat_share">Share</string>
    <string name="pref_key_share_customformat_without_comment">pref_key_share_customformat_without_comment</string>
    <string name="pref_def_share_customformat_without_comment">%2$s(%1$s)</string>
    <string name="pref_title_share_customformat_without_comment">Custom Format (without comment)</string>
    <string name="pref_summary_share_customformat_without_comment">%1$s: label, %2$s: package.</string>
    <string name="pref_key_share_customformat_with_comment">pref_key_share_customformat_with_comment</string>
    <string name="pref_def_share_customformat_with_comment">%2$s(%1$s)%3$s\n%3$s%3$s</string>
    <string name="pref_title_share_customformat_with_comment">Custom Format (with comment)</string>
    <string name="pref_summary_share_customformat_with_comment">%1$s: label, %2$s: package, %3$s: comment.</string>

    <!-- line break -->
    <string name="pref_key_share_add_linebreak">pref_key_share_add_linebreak</string>

    <bool name="pref_def_share_add_linebreak">false</bool>

    <string name="pref_title_share_add_linebreak">Add Line break</string>
    <string name="pref_summary_share_add_linebreak">Add a line break between items.</string>

    <!-- general -->
    <string name="pref_cat_general">General</string>

    <!-- show only running tasks -->
    <bool name="pref_def_general_show_only_running_packages">false</bool>

    <string name="pref_key_general_show_only_running_packages">pref_key_show_only_running_packages</string>
    <string name="pref_title_general_show_only_running_packages">Show only running process</string>
    <string name="pref_summary_general_show_only_running_packages">If checked, show only running packages, Otherwise show all packages.</string>

    <!-- show changed date -->
    <bool name="pref_def_general_show_changed_date">false</bool>

    <string name="pref_key_general_show_changed_date">pref_key_show_changed_date</string>
    <string name="pref_title_general_show_changed_date">Show changed date</string>
    <string name="pref_summary_general_show_changed_date">if checked, shows dates that you enabled or disabled packages.</string>

    <!-- sort by changed date -->
    <bool name="pref_def_general_sort_by_changed_date">false</bool>

    <string name="pref_key_general_sort_by_changed_date">pref_key_sort_by_changed_date</string>
    <string name="pref_title_general_sort_by_changed_date">Sort by changed date</string>
    <string name="pref_summary_general_sort_by_changed_date">If checked, disablable apps and disabled apps are sorted by changed date.</string>

    <!-- about -->
    <string name="pref_cat_about">About</string>

    <!-- long tap menu -->
    <string-array name="main_atcitity_long_tap_menu">
        <item>Edit comment</item>
        <item>Hide this app</item>
    </string-array>
    <string-array name="main_atcitity_hided_long_tap_menu">
        <item>Edit comment</item>
        <item>Show this app</item>
    </string-array>

    <!-- fod -->
    <string name="fod_back_to_default_path">Back to default directory</string>
    <string name="fod_back_to_default_path_mes">Back to default directory(%1$s)?</string>
    
    <!-- confirm title -->
    <string name="confirm_dialog_title">Confirm</string>
    
    <!-- at first -->
    <string name="confirm_first_dialog_message">Please do at your own risk disable apps. Is it OK?</string>

</resources>